<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="12120" systemVersion="16E195" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
    <device id="retina5_5" orientation="portrait">
        <adaptation id="fullscreen"/>
    </device>
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12088"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <objects>
        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LoginViewController">
            <connections>
                <outlet property="phoneField" destination="17p-Zb-37h" id="Uxb-oJ-5vj"/>
                <outlet property="pwdField" destination="3jg-SF-XaI" id="sxD-v4-ONe"/>
                <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
            </connections>
        </placeholder>
        <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
        <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
            <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
            <subviews>
                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="phone" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="17p-Zb-37h">
                    <rect key="frame" x="107" y="100" width="200" height="40"/>
                    <accessibility key="accessibilityConfiguration" identifier="phone"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="40" id="DSp-eN-Hgw"/>
                        <constraint firstAttribute="width" constant="200" id="EQi-Ut-Ubj"/>
                    </constraints>
                    <nil key="textColor"/>
                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                    <textInputTraits key="textInputTraits"/>
                </textField>
                <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="3jg-SF-XaI">
                    <rect key="frame" x="107" y="160" width="200" height="40"/>
                    <accessibility key="accessibilityConfiguration" identifier="password"/>
                    <nil key="textColor"/>
                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
                    <textInputTraits key="textInputTraits"/>
                </textField>
                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="hSh-tm-Q2W">
                    <rect key="frame" x="167" y="250" width="80" height="40"/>
                    <color key="backgroundColor" red="0.99607843139999996" green="0.80784313730000001" blue="0.83137254900000002" alpha="1" colorSpace="calibratedRGB"/>
                    <constraints>
                        <constraint firstAttribute="height" constant="40" id="j6x-wc-G9W"/>
                        <constraint firstAttribute="width" constant="80" id="jo3-rz-ASh"/>
                    </constraints>
                    <state key="normal" title="login"/>
                    <connections>
                        <action selector="login:" destination="-1" eventType="touchUpInside" id="iei-09-lMP"/>
                    </connections>
                </button>
            </subviews>
            <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
            <constraints>
                <constraint firstItem="3jg-SF-XaI" firstAttribute="centerX" secondItem="17p-Zb-37h" secondAttribute="centerX" id="EOf-M8-2bP"/>
                <constraint firstItem="3jg-SF-XaI" firstAttribute="top" secondItem="17p-Zb-37h" secondAttribute="bottom" constant="20" id="Op8-Kf-K0V"/>
                <constraint firstItem="17p-Zb-37h" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" constant="100" id="ZAJ-qs-eoC"/>
                <constraint firstItem="hSh-tm-Q2W" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="fCc-d3-xLA"/>
                <constraint firstItem="3jg-SF-XaI" firstAttribute="width" secondItem="17p-Zb-37h" secondAttribute="width" id="mZU-9G-2Po"/>
                <constraint firstItem="hSh-tm-Q2W" firstAttribute="top" secondItem="3jg-SF-XaI" secondAttribute="bottom" constant="50" id="sgM-3S-XH9"/>
                <constraint firstItem="17p-Zb-37h" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="tps-rQ-eXy"/>
                <constraint firstItem="3jg-SF-XaI" firstAttribute="height" secondItem="17p-Zb-37h" secondAttribute="height" id="xNX-If-o9s"/>
            </constraints>
        </view>
    </objects>
</document>
